--- a/TwilioExample/app/src/main/res/values/strings.xml
+++ b/TwilioExample/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TwilioExample</string>
+    <string name="mobile_permission_denied">Permission denied</string>
 </resources>
